Navigation items now styled to indicate which is currenlty active. Fixed layout issue where logout link is unclickable when the currently logged in user has a long name (hack fix - just made this area bigger. Real fix coming after blueprint is eliminated.

--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -53,16 +53,14 @@ h1, h2, h3, h4, h5, h6
     //padding-left = $blueprint-grid-width / 2
     text-align: justify
 
-#header 
+#header
+  +box-sizing(border-box)
+  border-left = 1px solid !dark_gray
   float: left
   height= ($blueprint-grid-width + $blueprint-grid-margin) * 2 - $blueprint-grid-margin
   +grid-width(20)
+  padding-top: 48px
   
-  a
-    padding: 0
-    color: inherit
-    text-decoration: none
-    
   // Apply to all header links (navigation and log in link)
   a
     +box-sizing(border-box)
@@ -71,22 +69,25 @@ h1, h2, h3, h4, h5, h6
     height: 100%
     margin: 0
     padding: 0
-    padding-top: 48px
-    text-align: center
+    text-align: left
+    text-decoration: none
     
   #nav
-    border-left = 1px solid !dark_gray
     +box-sizing(border-box)
     height: 100%
     
-    a
-      display: inline-block
+    // Text straight in a div means it's the current page
+    div
+      color = !main_color
       font-weight: bold
       text-align: left
       text-decoration: none
-      width: 100%
-      &:hover
-        border-bottom = 4px solid !dark_gray
+    
+      a
+        display: inline-block
+        width: 100%
+        &:hover
+          border-bottom = 4px solid !dark_gray
       
   #login_link
     text-align: center
